--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@prisma/client": "^5.16.1",
     "babel-plugin-styled-components": "^2.1.4",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "prisma": "^5.17.0-dev.10",
     "react": "^18",
     "react-dom": "^18",
