--- a/web/package.json
+++ b/web/package.json
@@ -10,11 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.16.1",
+    "@types/socket.io": "^3.0.2",
     "babel-plugin-styled-components": "^2.1.4",
+    "net": "^1.0.2",
     "next": "^14.2.4",
     "prisma": "^5.17.0-dev.10",
+    "pyodide": "^0.26.1",
     "react": "^18",
     "react-dom": "^18",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
     "styled-components": "^6.1.11"
   },
   "devDependencies": {
@@ -24,5 +29,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "typescript": "^5"
+  },
+  "browser": {
+    "child_process": false
   }
 }
